rewire CommitteeReportService with real types + csv/xlsx/pdf